[project]
name = "xpydf"
version = "0.1.3"
authors = [
    { name  = "Matthijs Wesseling", email = "matthijs.wesseling@bigdatarepublic.nl" },
]

description = "Python wrapper around the pdftotext and pdfimages functionalities of xpdf."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy == 1.21.6",
]

[project.urls]
"Homepage" = "https://github.com/Bladieblah/xpdf-python"
"Bug Tracker" = "https://github.com/Bladieblah/xpdf-python/issues"

[build-system]
requires = [
    "setuptools >= 42",
    "numpy >= 1.21.6",
]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
