[metadata]
name = xpydf
version = 0.1.3
description = Python wrapper around the pdftotext functionality of xpdf.
author = Matthijs Wesseling
author_email = matthijs.wesseling@bigdatarepublic.nl
maintainer = Matthijs Wesseling
maintainer_email = matthijs.wesseling@bigdatarepublic.nl
url = https://github.com/Bladieblah/xpdf-python
license = GNU General Public License v3 (GPLv3)
keywords = pdf parser, pdf converter, text mining, xpdf bindings
long_description = README.md
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir = 
    = src
packages = xpydf
requires = 
	requires-python >= 3.7
    setuptools >= 42
    numpy >= 1.21.6
build_backend = setuptools.build_meta
